<resources>
    <string name="app_name">Messenger</string>
    <string name="login_fragment_login">+7-(999)–999–99–99</string>
    <string name="welcome_fragment_login">Рады Вас видеть!</string>
    <string name="number_fragment_login">Введите номер телефона для \n регистрации/входа</string>
    <string name="error_fragment_login">Неверный логин или пароль</string>
    <string name="continue_fragment_login">Продолжить</string>
    <string name="otp_fragment_otp">Аутентификация</string>
    <string name="auth_fragment_otp">На ваш номер телефона был \n отправлен код аутентификации</string>
    <string name="resend_fragment_otp">Не получили код?</string>
    <string name="resend_bt_fragment_otp">Отправить \n снова</string>
    <string name="error_code_fragment_otp">Неверный код</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">account</string>
    <string name="full_name">%1s %2s</string>
    <string name="search">Search</string>
    <string name="account_fragment_account_set">Аккаунт</string>
    <string name="change_photo_fragment_account_set">Сменить фото</string>
    <string name="first_name_fragment_account_set">Иван</string>
    <string name="last_name_fragment_account_set">Кузнецов</string>
    <string name="middle_name_fragment_account_set">Сергеевич</string>
    <string name="birthdate_fragment_account_set">10.09.1992</string>
    <string name="save_fragment_account_set">Сохранить</string>
    <string name="settings_fragment_settings">Настройки</string>
    <string name="status_fragment_settings">Укажите статус</string>
    <string name="account_fragment_settings">Аккаунт</string>
    <string name="notification_fragment_settings">Уведомления</string>
    <string name="top_fragment_call">Ваш звонок защищен</string>
    <string name="title_send_file">Отправить файл</string>
    <string name="change_photo">Сменить фото</string>

    <string-array name="diaog_actions">
        <item>Сделать фото</item>
        <item>Выбрать из галереи</item>
        <item>Выход</item>
    </string-array>


    <string name="write_message">Напишите сообщение</string>

    <!--New Companion-->
    <string name="newCompanion_emptyCompanionList">Извините, пользователей с такими данными не найдено(</string>

    <!--User State-->
    <string name="userState_online">Онлайн</string>
    <string name="userState_offline">Был недавно</string>
    <string name="userState_typing">Печатает…</string>
</resources>