<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#33BEE7"
    tools:context=".presentation.fragment.authentication.LoginFragment">

    <View
        android:id="@+id/viewLogIn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_login_background_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1" />

    <ImageView
        android:id="@+id/imageViewLogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:src="@drawable/ic_gazprom"
        app:layout_constraintBottom_toBottomOf="@id/viewLogIn"
        app:layout_constraintEnd_toEndOf="@id/viewLogIn"
        app:layout_constraintStart_toStartOf="@id/viewLogIn" />

    <TextView
        android:id="@+id/textViewLogInHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_fragment_login"
        android:textAppearance="@style/TextAppearance.AppCompat.AuthenticationHeadingTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLogIn" />

    <TextView
        android:id="@+id/textViewLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/number_fragment_login"
        android:textAppearance="@style/TextAppearance.AppCompat.AuthenticationTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogInHeading" />

    <EditText
        android:id="@+id/editTextLogIn"
        style="@style/ThemeOverlay.Material3.TextInputEditText.AuthenticationEditText"
        android:layout_marginTop="16dp"
        android:hint="@string/login_fragment_login"
        android:inputType="textPersonName"
        android:text="+1 655-855-3822"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogIn" />

    <ProgressBar
        android:id="@+id/progressBarLogIn"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogIn" />

    <TextView
        android:id="@+id/textViewErrorLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/error_fragment_login"
        android:textAppearance="@style/TextAppearance.AppCompat.AuthenticationEditText"
        android:textColor="#CCFB2727"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarLogIn" />

    <Button
        android:id="@+id/buttonLogIn"
        style="@style/ShapeAppearanceOverlay.Material3.Button.BlackButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/continue_fragment_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewErrorLogIn" />


</androidx.constraintlayout.widget.ConstraintLayout>